--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9983651053601021"
-     crossorigin="anonymous"></script>
+ <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans:wght@900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,20 +13,20 @@
   <meta name="author" content="BigFatGrub">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/polytonk-arena-icon.png">
-</head>
-<title>PolyTonk | V2</title>
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NMQ02TBWBF"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+     gtag('config', 'G-NMQ02TBWBF');
+   </script>
+ </head>
+<title>PolyTonk | V2.1</title>
 <a id="link"></a>
-<script src="/min.js"></script>
-<script src="/script.js"></script>
-  <script>
-    // Check if the user is on a mobile device
-    if (!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))) {
-      // Hide mobile controls for non-mobile devices
-      document.addEventListener("DOMContentLoaded", function() {
-        document.getElementById("mobileControls").style.display = "none";
-      });
-    }
-  </script>
+    <script src="/min.js"></script>
+    <script src="/script.js"></script>
 <style>
   body{
     cursor: crosshair;
@@ -57,6 +54,7 @@
     left: 0;
     border: none;
     outline: none;
+    font-size: 20%; 
     display: none;
     background: none;
     font-family: Odibee Sans;
@@ -91,99 +89,23 @@
     opacity:0.8;
   }
   .terminalButton:hover {
+    cursor: crosshair;
     background:grey;
     cursor:pointer;
   }
-  #mobileControls {
-    top: calc(50% - 80px); /* Adjust the top position as needed */
-    left: calc(50% - 80px); /* Adjust the left position as needed */
-    z-index: 1000; /* Ensure the buttons appear above other elements */
-  }
-
-  #mobileControls button {
-    position: fixed;
-    width: 40px;
-    height: 40px;
-    font-size: 24px;
-    font-family: Odibee Sans;
-  }
-  #mobileControls {
-    position: fixed;
-    top: calc(92.5% - 50px); /* Adjust the top position as needed */
-    left: calc(35% - 50px); /* Adjust the left position as needed */
-    z-index: 1000; /* Ensure the buttons appear above other elements */
-  }
-
-  #mobileControls button {
-    width: 60px;
-    height: 60px;
-    font-size: 24px;
-    font-family: Odibee Sans;
-    border: 2px solid #FFFFFF;
-    background-color: transparent;
-    color: #FFFFFF;
-    position: absolute;
-  }
-
-  #btnUp {
-    bottom: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-5%);
-    border-radius: 5px 5px 0px 0px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  }
-
-  #btnDown {
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  }
-
-
-  #btnLeft {
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    transform: translateX(-55%);
-    border-radius: 5px 0px 0px 5px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  }
-
-  #btnRight {
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    transform: translateX(55%);
-    border-radius: 0px 5px 5px 0px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  }
 </style>
-<body>
-  <!-- Mobile controls -->
-  <div id="mobileControls">
-    <button id="btnUp" style="">&#8679;</button>
-    <button id="btnLeft" style="">&#8678;</button>
-    <button id="btnRight" style="">&#8680;</button>
-    <button id="btnDown" style="">&#8681;</button>
-  </div>
-
-
-  <!-- Your existing HTML content -->
-  <canvas id="mainCanvas"></canvas>
-  <input id="nameInput" style="display:none;" class="playerInput" maxlength="10" placeholder="Enter your username">
-  <div id="loginInput" style="position:fixed;left:0;top:0;display:none;">
-    <input id="loginNameInput" class="loginInput" maxlength="10">  
-    <input id="loginPassInput" type="password" class="loginInput" style="top:100px;" maxlength="10"> 
-  </div>
-  <div id="terminal" style="display:none;">
-    <textarea id="terminalOutput" style="position:fixed;top:calc(100% - 25px - 20px - 250px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 250px;opacity:0.8" placeholder="Output"></textarea>
-    <input id="terminalInput" style="position:fixed;top:calc(100% - 25px - 10px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 25px;opacity:0.8" placeholder="Enter a command...">
-    <button id="terminalExit" class="terminalButton" placeholder="Enter a command...">Exit</button>
-  </div>
+<canvas id="mainCanvas"></canvas>
+<input id="nameInput" style="display:none;" class="playerInput" maxlength="10" placeholder="Enter your username">
+<div id="loginInput" style="position:fixed;left:0;top:0;display:none;">
+  <input id="loginNameInput" class="loginInput" maxlength="10">  
+  <input id="loginPassInput" type="password" class="loginInput" style="top:100px;" maxlength="10"> 
+</div>
+<div id="terminal" style="display:none;">
+  <textarea id="terminalOutput" style="position:fixed;top:calc(100% - 25px - 20px - 250px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 250px;opacity:0.8" placeholder="Output"></textarea>
+  <input id="terminalInput" style="position:fixed;top:calc(100% - 25px - 10px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 25px;opacity:0.8" placeholder="Enter a command...">
+  <button id="terminalExit" class="terminalButton" placeholder="Enter a command...">Exit</button>
+</div>
 <script type="module" src="./config.js"></script>
 <script type="module" src="./main.js"></script>
 <script type="module" src="./protocol/spb.js"></script>
 <script type="module" src="./protocol/protocol.js"></script>
-  </body>
-  </html>
