--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
  <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -7,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="/assets/polytonk-arena-icon.png">
   <meta name="description" content="PolyTonk is a sequel to Diep.io, with a lot of tanks and features!">
   <meta name="keywords" content="Diep, Arras, Obstar, Maxtri, io">
   <meta name="theme-color" content="#ffb347">
