--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
 <html>
  <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans:wght@900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
-  <link rel="icon" type="image/x-icon" href="/assets/polytonk-arena-icon.png">
   <meta name="description" content="PolyTonk is a sequel to Diep.io, with a lot of tanks and features!">
   <meta name="keywords" content="Diep, Arras, Obstar, Maxtri, io">
   <meta name="theme-color" content="#ffb347">
   <meta name="author" content="BigFatGrub">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/polytonk-arena-icon.png">
+  <link rel="icon" type="image/x-icon" href="/assets/polytonk-arena-icon.png">
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NMQ02TBWBF"></script>
    <script>
@@ -21,7 +23,7 @@
      gtag('config', 'G-NMQ02TBWBF');
    </script>
  </head>
-<title>PolyTonk | V2.2</title>
+<title>PolyTonk | V2.1</title>
 <a id="link"></a>
     <script src="/min.js"></script>
     <script src="/script.js"></script>
