--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
   <meta name="author" content="BigFatGrub">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/assets/polytonk-arena-icon.png">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5331159519199119"
+     crossorigin="anonymous"></script>
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NMQ02TBWBF"></script>
    <script>
