--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,6 @@
   <meta name="author" content="BigFatGrub">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/assets/polytonk-arena-icon.png">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5331159519199119"
-     crossorigin="anonymous"></script>
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NMQ02TBWBF"></script>
    <script>
@@ -27,8 +25,8 @@
  </head>
 <title>PolyTonk | V2.1</title>
 <a id="link"></a>
-    <script src="/min.js"></script>
-    <script src="/script.js"></script>
+    <!--<script src="/min.js"></script>
+    <script src="/script.js"></script>-->
 <style>
   body{
     cursor: crosshair;
