--- a/client/index.html
+++ b/client/index.html
@@ -22,8 +22,14 @@
 
      gtag('config', 'G-NMQ02TBWBF');
    </script>
+   <script>
+   function scrollToBottom() {
+       var textarea = document.getElementById("terminalOutput");
+       textarea.scrollTop = textarea.scrollHeight;
+   }
+   </script>
  </head>
-<title>PolyTonk | V2.1</title>
+<title>PolyTonk | V2.3</title>
 <a id="link"></a>
     <!--<script src="/min.js"></script>
     <script src="/script.js"></script>-->
@@ -101,9 +107,9 @@
   <input id="loginPassInput" type="password" class="loginInput" style="top:100px;" maxlength="10"> 
 </div>
 <div id="terminal" style="display:none;">
-  <textarea id="terminalOutput" style="position:fixed;top:calc(100% - 25px - 20px - 250px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 250px;opacity:0.8" placeholder="Output"></textarea>
-  <input id="terminalInput" style="position:fixed;top:calc(100% - 25px - 10px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 25px;opacity:0.8" placeholder="Enter a command...">
-  <button id="terminalExit" class="terminalButton" placeholder="Enter a command...">Exit</button>
+  <textarea id="terminalOutput" readonly onchange="scrollToBottom()" style="position:fixed;top:calc(100% - 25px - 20px - 250px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 250px;opacity:0.8; font-size: 20px;" placeholder="Messages will appear here""></textarea>
+  <input id="terminalInput" style="position:fixed;top:calc(100% - 25px - 10px);left:10px;background:black;color:white;font-family: Odibee Sans;border:none;outline:none;width: 300px;height: 25px;opacity:0.8" placeholder="Type your message here...">
+  <button id="terminalExit" class="terminalButton" placeholder="Type your message here...">Exit</button>
 </div>
 <script type="module" src="./config.js"></script>
 <script type="module" src="./main.js"></script>
